@@ -1,3 +1,5 @@
+dev:
+  * add read_events_kwargs option, can be used to pass options to ObsPy's read_events
 v4.2:
   * allow to fix station site response to geometric mean of more than one station (for command line script)
   * excluded label is now optional
